--- a/app/src/main/res/layout/activity_constraint_layout.xml
+++ b/app/src/main/res/layout/activity_constraint_layout.xml
@@ -7,60 +7,110 @@
     android:layout_height="match_parent"
     tools:context="net.george.alltestdemo.ConstraintLayoutActivity">
 
-    <!--动画-->
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BUTTON1"
+    <!--切换不同的Layout动画-->
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_width="92dp"
+        android:layout_height="92dp"
+        app:srcCompat="@mipmap/ic_launcher"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/colorAccent"
-        android:layout_marginLeft="52dp"
-        android:layout_marginTop="69dp"/>
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BUTTON2"
-        app:layout_constraintLeft_toRightOf="@id/button1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/colorPrimaryDark"
         android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.57"
-        android:layout_marginTop="136dp"/>
-    <Button
-        android:id="@+id/button3"
+        app:layout_constraintHorizontal_bias="0.02"/>
+    <TextView
+        android:id="@+id/text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Hello this is a simple demo. Thanks for reading and learning new things.\nHello this is a simple demo. Thanks for reading and learning new things.\nHello this is a simple demo. Thanks for reading and learning new things.\nHello this is a simple demo. Thanks for reading and learning new things.\nHello this is a simple demo. Thanks for reading and learning new things.\nHello this is a simple demo. Thanks for reading and learning new things.\nHello this is a simple demo. Thanks for reading and learning new things.\nHello this is a simple demo. Thanks for reading and learning new things.\n"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp"
+        android:lines="6"
+        app:layout_constraintLeft_toRightOf="@id/image_view"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"/>
+    <CheckBox
+        android:id="@+id/check_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BUTTON3"
+        android:text="CheckBox"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button1"
-        android:background="@android:color/holo_red_dark"
-        android:layout_marginLeft="88dp"
-        android:layout_marginTop="102dp"/>
+        android:layout_marginLeft="16dp"
+        app:layout_constraintRight_toLeftOf="@id/text_view"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="1.0"/>
+    <Button
+        android:id="@+id/button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintTop_toBottomOf="@id/text_view"
+        android:layout_marginTop="8dp"/>
+    <!--动画-->
+    <!--<Button-->
+    <!--android:id="@+id/button1"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="BUTTON1"-->
+    <!--app:layout_constraintLeft_toLeftOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="parent"-->
+    <!--android:background="@color/colorAccent"-->
+    <!--android:layout_marginLeft="52dp"-->
+    <!--android:layout_marginTop="69dp"/>-->
+    <!--<Button-->
+    <!--android:id="@+id/button2"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="BUTTON2"-->
+    <!--app:layout_constraintLeft_toRightOf="@id/button1"-->
+    <!--app:layout_constraintRight_toRightOf="parent"-->
+    <!--app:layout_constraintTop_toTopOf="parent"-->
+    <!--android:background="@color/colorPrimaryDark"-->
+    <!--android:layout_marginLeft="8dp"-->
+    <!--android:layout_marginRight="8dp"-->
+    <!--app:layout_constraintHorizontal_bias="0.57"-->
+    <!--android:layout_marginTop="136dp"/>-->
+    <!--<Button-->
+    <!--android:id="@+id/button3"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="BUTTON3"-->
+    <!--app:layout_constraintLeft_toLeftOf="parent"-->
+    <!--app:layout_constraintTop_toBottomOf="@id/button1"-->
+    <!--android:background="@android:color/holo_red_dark"-->
+    <!--android:layout_marginLeft="88dp"-->
+    <!--android:layout_marginTop="102dp"/>-->
     <Button
         android:id="@+id/applyButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="APPLY"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/resetButton"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        android:onClick="onApplyClick"/>
+        android:onClick="onApplyClick"
+        android:text="APPLY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/resetButton" />
+
     <Button
         android:id="@+id/resetButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="RESET"
-        app:layout_constraintLeft_toRightOf="@id/applyButton"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        android:onClick="onResetClick"/>
+        android:onClick="onResetClick"
+        android:text="RESET"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/applyButton"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <!--1.1.x新增的几个特性-->
     <!--Group
