--- a/app/src/main/res/layout/activity_rx_java.xml
+++ b/app/src/main/res/layout/activity_rx_java.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context="net.george.alltestdemo.RxJavaActivity">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:scaleType="centerCrop"
+        app:layout_constraintTop_toTopOf="parent"/>
+
 </android.support.constraint.ConstraintLayout>
