--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,5 +44,11 @@
         android:layout_height="wrap_content"
         android:text="自定义各种Widget测试接口"
         android:textAllCaps="false"/>
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Gson测试接口"
+        android:textAllCaps="false"/>
 
 </LinearLayout>
