增加Okhttp测试框架代码

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,5 +50,11 @@
         android:layout_height="wrap_content"
         android:text="Gson测试接口"
         android:textAllCaps="false"/>
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Okhttp测试接口"
+        android:textAllCaps="false"/>
 
 </LinearLayout>
