--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,5 +68,11 @@
         android:layout_height="wrap_content"
         android:textAllCaps="false"
         android:text="自定义View测试接口"/>
+    <Button
+        android:id="@+id/button11"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:text="Andriod各种基本控件测试接口"/>
 
 </LinearLayout>
